--- a/Traveler.Experience.Rmd
+++ b/Traveler.Experience.Rmd
@@ -13,13 +13,18 @@ knitr::opts_chunk$set(echo = FALSE, include=FALSE)
 
 #JD Power data 
 
-OK, what's the primary goal? Is it to understand market segmentation? Or is it to find strong predictors of overall satisfaction? 
+We've spent a little time with the ASQ and JD Power data sets. A brief discussion follows. 
 
-There are a number of files in the folders. We really only see two usable raw data files, one apiece for ASQ (ACI ASQ Survey Main_ Q3 2019 Data-EXCEL-v1.xlsx) and from JD Power (ACI ASQ Survey Main_ Q3 2019 Data-EXCEL-v1.xlsx). Everything else is a PDF report or, in a couple of cases, Excel files that include synthesized tables or data dictionaries. That's as of the morning of 11/5. 
+It's worth asking this question up front: what's a primary goal of this exploration (or subsequent correlation analysis)? Is it to understand market segmentation at the airports? Or is it to find strong predictors of overall satisfaction? 
+
+We can address that later. For now, we see a number of files in the folders. But there are really two critical raw data files: 
+
+1. One ASQ raw data file from 2019 (ACI ASQ Survey Main_ Q3 2019 Data-EXCEL-v1.xlsx), and,
+2. One JD Power raw data file from 2018 (Client_SPSS_File_W1W4 (1).csv). 
+
+Everything else is a PDF report or, in a couple of cases, Excel files that include synthesized tables or data dictionaries. That's as of the morning of 11/5. 
 
 We started with those two data files. In particular, we were interested in the JD Power data since it's potentially so rich and provides a new data source outside of ASQ. 
-
-(One big step for this and all future quantitative analysis of these two data sets is to start making all data sets, for every quarter (ASQ) or year (JD Power), available. Preferably using identical data structure and file naming scheme.) 
 
 ```{r}
 setwd("~/Dropbox/Work and research/Port Authority/cx2")
@@ -47,11 +52,11 @@ asq193 = as.data.frame(asq193)
 names(asq193) = tolower(names(asq193)) 
 ```
 
+The JD Power data set is rougher, but potentially very rich. It has more than 400 fields and around 40,000 observations taken from four survey visits (multiple days) each in late 2017 through fall 2018. The data "labels" are stored in a separate file with different formatting so we've transposed them and glued them to the master data set. 
 
-The JD Power data is from 2018 and has more than 400 fields. The data "labels" are stored in a separate file with different formatting so we've transposed them and glued them to the master data set. 
 ```{r}
 jd18 = read.csv("./JD Power/2018 Study/Raw Data/Client_SPSS_File_W1W4 (1).csv")
-
+table(jd18$SURVEY_MONTH, jd18$SURVEY_YEAR) 
 jdnames = read_excel("./JD Power/2018 Study/Raw Data/2018 W1-W4 Data Dictionary.xlsx", skip = 1) 
 jdnames = as.data.frame(jdnames) 
 jdnames = jdnames[,c(1,3)] # Pick only the field names and labels. Labels will be important later.
@@ -65,12 +70,13 @@ jdlabels = head(jdlabels,411) # Only the first 411 rows count
 names(jd18) = c(jdlabels) 
 ```
 
-We're guessing "Overall.Satisfaction.Index" is the variable of interest. It appears to be scaled from 100-1000 or something? 
-```{r}
+We're guessing "Overall.Satisfaction.Index" is the variable of interest. It appears to be scaled from, roughly, 100-1000, which seems to match some of the visualizations in the PDF reports:
+
+```{r, echo=FALSE, include=TRUE}
 summary(jd18$Overall.Satisfaction.Index) 
 ```
 
-The JD Power data has 411 variables. We dropped 26 that promised little value or would be difficult to analyze. 
+The JD Power data has 411 variables. We dropped 26 that promised little value or would actually get in the way of correlation analysis. 
 
 ```{r}
 # Take a hint from https://uc-r.github.io/hc_clustering 
@@ -105,7 +111,9 @@ not_all_na = function(x) {!all(is.na(x))} # Quick function
 jd18.2 = jd18.2 %>% select_if(not_all_na) # Remove variables with all NAs. 
 ```
 
-This could present real issues. Here are the variable names after re-labeling and a quick summary of each. Notice the number of missing observations (NAs) and the variation in their propensity across different variables. 
+Here are the variable names after re-labeling and a quick summary of each. Notice the number of missing observations (NAs) and the variation in those missing observations' propensity across different variables. And, to make matters tougher, the missing observations' are distributed variously across survey respondents - they're not limited to certain questions. So when you try and just drop respondents with any NA answers or, conversely, drop survey questions with any NA responses, you're left with nothing. 
+
+This could present real issues - let's chat before we do more. 
 
 ##Variable names (labels):
 
