--- a/Traveler.Experience.Rmd
+++ b/Traveler.Experience.Rmd
@@ -64,7 +64,7 @@ jd18 = read.csv("./JD Power/2018 Study/Raw Data/Client_SPSS_File_W1W4 (1).csv")
 table(jd18$SURVEY_MONTH, jd18$SURVEY_YEAR) 
 jdnames = read_excel("./JD Power/2018 Study/Raw Data/2018 W1-W4 Data Dictionary.xlsx", skip = 1) 
 jdnames = as.data.frame(jdnames) 
-jdnames = jdnames[,c(1,3)] # Pick only the field names and labels. Labels will be important later.
+jdnames = jdnames[,c(1,3)] # Pick only field names and label. Label will be important later.
 jdnames = as.data.frame(gsub("[[:punct:]]", "", as.matrix(jdnames))) # Remove special characters.
 # Remove spaces in names, transpose them, and take the labels only for short-term use.
 jdnames$Label = gsub(" ",".",jdnames$Label) 
@@ -178,23 +178,32 @@ share.Na = as.data.frame(t(jd18.2 %>%
 ```
 
 There are 40 variables without missing values: 
-```{r, include=TRUE, echo=TRUE}
-subset(share.Na, share.Na==0) 
+```{r, include=TRUE, echo=FALSE}
+short = subset(share.Na, share.Na==0) 
+short 
 ```
 
-Another 8 have some, but less than 21 percent, missing values: 
-```{r}
-subset(share.Na, share.Na>0 & share.Na<21) 
+.
+Another eight have around 13 or 14 percent missing values: 
+```{r, include=TRUE, echo=FALSE}
+subset(share.Na, share.Na>0 & share.Na<15) #21
 ```
 
-And a full 140 are missing exactly 21.636 percent of their observations! Here they are: 
-```{r}
+.
+Then 140 variables missing exactly 21.636 percent of their observations! Here they are: 
+```{r, include=TRUE, echo=FALSE}
 subset(share.Na, share.Na>21.63601 & share.Na<21.6361) 
 ```
 
+##To do 
+```{r}
+means = as.data.frame(colMeans(is.na(jd18.2))) 
+```
+
+
 
 ##Future steps? 
-Plot the number of missing observations in a variable grouped by another variable using the facet argument. This would shed light on whether they are missing by survey month - perhaps one question was asked during the April survey but not the other three surveys. Or maybe it varied by the person conducting the survey. Those are the two potential answers that come to mind. 
+Visualizing the number of missing observations in one variable faceted (grouped) by another variable may shed light on whether they are missing by survey month - perhaps one question was asked during the April survey but not the other three surveys. Or maybe it varied by the person conducting the survey. Those are the two potential answers that come to mind. 
 
 ```{r, echo=FALSE, include=FALSE}
 #gg_miss_var(airquality,
@@ -202,15 +211,17 @@ Plot the number of missing observations in a variable grouped by another variabl
 ```
 
 
-#Appendix 
+\pagebreak
 
-##Variable names (labels):
+#APPENDIX
+
+##Full variable list (labels):
 
 ```{r, echo=FALSE, include=TRUE}
 names(jd18.2) 
 ```
 
-##Summaries: 
+##Summaries of each: 
 ```{r, echo=FALSE, include=TRUE}
 summary(jd18.2) 
 ```
@@ -218,4 +229,3 @@ summary(jd18.2)
 ```{r}
 options(warn=0) # turn annoying warnings back on
 ```
-
